# SalesConversion-Bench

./: .gitignore  .gitlint  ACT_I_IMPLEMENTATION_NOTES.md  FINAL_SUBMISSION_TASKS.md  INTERIM_SUBMISSION_PLAN.md  LICENSE  README.md  Tenacious Style Guide and 12 Good-Bad Examples v2.md  Welcome_To_Colab.ipynb  audit_memo.md  blog_post_draft.md  contamination_check.json  contamination_check.v0.2.json  cost_log.csv  datasheet.md  evidence_graph.json  hf_dataset_README.md  inference_cost_estimate.json  inter_rater_agreement.md  interim_report.md  lefthook.yml  memo.md  methodology.md  methodology_rationale.md  pyproject.toml  requirements.txt  schema.json  scoring_evaluator.py  tau2_bench_issue.md  tenacious_path_b_simpo_colab.ipynb
ablations/: ablation_results.json  build_held_out_traces.py  held_out_preference_margins.jsonl  held_out_preference_summary.json  held_out_prompt_baseline_margins.jsonl  held_out_prompt_baseline_summary.json  held_out_traces.jsonl  held_out_traces_raw.jsonl  icp_misclassification_refinement_playbook.md  paired_bootstrap_delta_a.py  run_ablations.py  significance_test.txt  v01_coverage_audit.txt
docs/: kill_switch_calibration.md
eval_examples/: README.md  inter_rater_comparison_run1_vs_run2.json  inter_rater_pass1_labels.json  inter_rater_pass2_labels.json  tbv01-001.json  tbv01-007.json  tbv01-021.json  tbv01-028.json  tbv01-038.json  tbv01-042.json  tbv01-043.json  tbv01-051.json  tbv01-055.json  tbv01-059.json
generation_scripts/: README.md  __init__.py  build_dataset.py  build_preference_pairs.py  build_preference_pairs_parallel.py  (+21 more)
(+56 files in other folders)
