[project]
name = "salesconversion-bench"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.0.0",
  "bitsandbytes>=0.45.0",
  "datasets>=2.0.0",
  "jsonschema>=4.0.0",
  "peft>=0.10.0",
  "pydantic-settings>=2.0.0",
  "sentence-transformers>=2.0.0",
  "transformers>=4.40.0",
  "trl>=0.9.0",
]

[dependency-groups]
dev = [
    "gitlint>=0.19.1",
    "reportlab>=4.0.0",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 200
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
